--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.25.1",
     "use-reducer-logger": "^1.0.2"
