--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://busimaximiliano:N2PYIkWQ7qUC4kez@clusteramazona.ro3tvjl.mongodb.net/amazona=true&w=majority&appName=ClusterAmazona
+MONGODB_URI=mongodb+srv://busimaximiliano:ovcAoyWVVZy6j7AS@clusteramazona.ro3tvjl.mongodb.net/?retryWrites=true&w=majority&appName=ClusterAmazona
