--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
+JWT_SECRET=somethingsecret
 MONGODB_URI=mongodb+srv://busimaximiliano:ovcAoyWVVZy6j7AS@clusteramazona.ro3tvjl.mongodb.net/?retryWrites=true&w=majority&appName=ClusterAmazona
