--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-helmet-async": "^2.0.5",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "use-reducer-logger": "^1.0.2"
   },
   "devDependencies": {
